# Project56

./: .env  .gitignore  How to get ODB to work in 13 bloody steps  README.md  credentials.pgconf  docker_stop_all_containers.sh  nginx.conf  scriptipchange.sh  scripttest.sh  test.txt  verify_docker.sh
Aantekeningen enz/: .env  Waarschuwingen.docx
CSVReader/: CMakeLists.txt  csvreader.h  main.cpp  main.out
DirListener2.1/: CMakeLists.txt  main.cpp
NewestCSVParser/: CMakeLists.txt  main.cpp
PDFCreator/: CMakeLists.txt  main.cpp  pdf.cpp
PDF_and_FDB_and_LISTENER/: csvreader.h  listener.h  main.cpp  main.out  pdf.cpp  pdfcreator.h
PipesTest/: CMakeLists.txt  main.cpp  reading.cpp
http/: build.xml  (+2 more)
input/csv_converter/: CMakeLists.txt  CsvReaderTest.cpp  README.md  RunAllTests.cpp  RunAllTests.out  RunnAllTests.out  a.out  connections.csv  csvreader.h  file.xml  filedatabase.h  inputprocess  listener.h  main.cpp  main.cpp.orig  main.out  pdfcreator.h  positions.csv  runalltests.out  tables.ss  testreport.xml
input/csv_converter/csvreader/: CsvReaderTest.cpp  a.out  csvreader.h  dbpusher.h
input/csv_converter/dbentities/: ConnectionEntity.h  EventEntity.h  MonitoringEntity.h  PositionEntity.h
input/csv_converter/dbpusher/: dbpusher.h
input/csv_converter/filedatabase/: fdbhelperfunc.h  fdbread.h  filedatabase.h
input/csv_converter/helperfunc/: helperfunc.h
input/csv_converter/pqcon/: configreader.h  configreader.h.orig  pgsqlcon.h
input/csv_converter/tests/: dbpusher.h  mock_dbpusher.h  mock_pgsqlcon.h  test.out  test_dbpusher.cpp  test_pgsqlcon.cpp
(+239 files in other folders)
